// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup loader should convert file 1`] = `
"var _path;

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

import * as React from \\"react\\";

var SvgFile = function SvgFile(props) {
  return /*#__PURE__*/React.createElement(\\"svg\\", _extends({
    width: 48,
    height: 1,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, props), _path || (_path = /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M0 0h48v1H0z\\",
    fill: \\"#063855\\",
    fillRule: \\"evenodd\\"
  })));
};

export default SvgFile;"
`;

exports[`rollup loader should convert file with previousExport of image plugin 1`] = `
"import * as React from \\"react\\";

const SvgFile = props => <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" /></svg>;

export { SvgFile as ReactComponent };"
`;

exports[`rollup loader should convert file with previousExport of url plugin 1`] = `
"import * as React from \\"react\\";

const SvgFile = props => <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" /></svg>;

export { SvgFile as ReactComponent };"
`;

exports[`rollup loader should convert file without babel 1`] = `
"import * as React from \\"react\\";

const SvgFile = props => <svg width={48} height={1} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" /></svg>;

export default SvgFile;"
`;
